# cloud-scanner

./: .dockerignore  .env.dev  .gitignore  404.html  ADOPTERS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  index.html  intro.html  package-lock.json  package.json  print.html  res.json  searcher-c2a407aa.js  searchindex-f559e7ea.js  searchindex.js  searchindex.json  serverless.yml  toc-be5f87a2.js  toc.html  toc.js
.devcontainer/: Dockerfile  bashrc  devcontainer.json  vimrc
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/workflows/: docker-build-and-publish.yml
.github/workflows/: doc-as-github-pages.yml  docker-build-and-publish-release.yml  docker-build-and-publish.yml  publish-doc-to-gh-pages.yml  publish-doc-to-github-pages.yml  publish-doc.yml  rust-test.yml
boavizta-api-sdk/: Cargo.toml  README.md
boavizta-api-sdk/.openapi-generator/: FILES
boavizta-api-sdk/docs/: Case.md  CloudApi.md  ComponentApi.md  ComponentCase.md  ComponentCpu.md  ComponentHdd.md  ComponentMotherBoard.md  ComponentPowerSupply.md  ComponentRam.md  ComponentSsd.md  ConfigurationServer.md  Cpu.md  Disk.md  HttpValidationError.md  LocationInner.md  ModelServer.md  MotherBoard.md  PowerSupply.md  Ram.md  ServerApi.md  ServerDto.md  UsageCloud.md  UsageServer.md  ValidationError.md
boavizta-api-sdk/src/apis/: cloud_api.rs  component_api.rs  configuration.rs  mod.rs  server_api.rs
boavizta-api-sdk/src/models/: case.rs  component_case.rs  component_cpu.rs  component_hdd.rs  component_mother_board.rs  component_power_supply.rs  component_ram.rs  component_ssd.rs  configuration_server.rs  cpu.rs  disk.rs  http_validation_error.rs  location_inner.rs  mod.rs  model_server.rs  mother_board.rs  power_supply.rs  ram.rs  server_dto.rs  usage_cloud.rs  usage_server.rs  validation_error.rs  validation_error_loc_inner.rs
cloud-scanner-cli/: Cargo.toml  Dockerfile
cloud-scanner-cli/csv/: cloud_providers_regions.csv
cloud-scanner-cli/src/: aws_api.rs  aws_cloud_provider.rs  aws_inventory.rs  boavizta_api.rs  boavizta_api_v1.rs  cloud_inventory.rs  cloud_provider.rs  cloud_provider_regions.csv  cloud_resource.rs  countries.rs  estimated_inventory_exporter.rs  impact_provider.rs  inventory_exporter.rs  json_exporter.rs  lib.rs  main.rs  metric_endpoint.rs  metric_exporter.rs  metric_server.rs  metrics.rs  model.rs  standalone_server.rs  usage_location.rs
cloud-scanner-cli/test-data/: AWS_INVENTORY.json  AWS_INVENTORY_FORMATTED.json  DEFAULT_RAW_IMPACTS_OF_HDD.json  DEFAULT_RAW_IMPACTS_OF_HDD_1HRS_FR.json  DEFAULT_RAW_IMPACTS_OF_M6GXLARGE_1HRS_FR.json  DEFAULT_RAW_IMPACTS_OF_M6GXLARGE_1HRS_FR_VERBOSE.json  DEFAULT_RAW_IMPACTS_OF_SSD.json  DEFAULT_RAW_IMPACTS_OF_SSD_1000GB_1HR.json  DEFAULT_RAW_IMPACTS_OF_SSD_1GB_1HR.json  INVENTORY_JSON_SCHEMA.json
cloud-scanner-lambda/: Cargo.toml
cloud-scanner-lambda/src/: main.rs  metrics.rs
dashboard-config/prometheus/: prometheus.yml
dashboard-config/provisioning/dashboards/: default.yml  grafana-dashboard-cloud-K8s.template.json  grafana-dashboard-cloud-impacts.template-for-manual-import.json  grafana-dashboard-cloud-impacts.template.json  grafana-dashboard.template.json
dashboard-config/provisioning/datasources/: prometheus-datasource.yml
docs/: book.toml  cloud-scanner-system-in-context.puml  example-query.md  refactor.mm.md  sample_result.json
docs/src/: SUMMARY.md  intro.md
docs/src/explanations/: block-storage.md  implementation.md  methodology.md  processing-workload.md  source-of-data.md
docs/src/how-to/: building-cli.md  deploy-sls.md  docker-guide.md  estimate-from-existing-inventory-file.md  filter-by-tags.md  filtering-with-tags.md  passing-aws-credentials.md  set-up-dashboard.md  simulate-impacts-of-an-inventory.md  using-private-boaviztapi.md
docs/src/reference/: FAQ.md  cli-options.md  common-issues-and-FAQ.md  common-issues.md  env-vars.md  limits.md  openapi-server-mode.md  openapi.json  output-data.md  processing-workload.md  serverless-design.md  source-of-data.md  testing.md
docs/src/tutorials/: quickstart-cli.md  quickstart-dashboard-docker.md  quickstart-docker.md  quickstart-rust-cli.md  quickstart-serverless.md
explanations/: block-storage.html  methodology.html  processing-workload.html
how-to/: building-cli.html  deploy-sls.html  docker-guide.html  estimate-from-existing-inventory-file.html  filter-by-tags.html  passing-aws-credentials.html  set-up-dashboard.html  simulate-impacts-of-an-inventory.html  using-private-boaviztapi.html
reference/: FAQ.html  cli-options.html  common-issues-and-FAQ.html  common-issues.html  env-vars.html  limits.html  openapi-server-mode.html  openapi.json  output-data.html  serverless-design.html  testing.html
tutorials/: quickstart-dashboard-docker.html  quickstart-docker.html  quickstart-rust-cli.html  quickstart-serverless.html
