[package]
authors = ["boavizta.org", "Olivier de Meringo <demeringo@gmail.com>"]
edition = "2021"
name = "cloud-scanner-cli"
version = "2.0.2"

[dependencies]
chrono = "^0.4"
isocountry = "^0.3"
log = "0.4"
loggerv = "0.7"
pkg-version = "*"
prometheus-client = "*"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
anyhow = "1.0.65"
async-trait = "0.1.58"
assert-json-diff = "2.0.2"
rocket = { version = "0.5.0", default-features = false, features = [
  "json",
] }
rocket_okapi = { version = "0.8.0", features = ["swagger", "rapidoc"] }
aws-types = "1"

[dependencies.boavizta_api_sdk]
version = "1.1.0"
# path = "../../boaviztapi-sdk-rust"

[dependencies.aws-config]
features = ["behavior-version-latest", "rustls"]
version = "1"

[dependencies.aws-sdk-cloudwatch]
features = ["behavior-version-latest", "rustls"]
version = "1"

[dependencies.aws-sdk-ec2]
features = ["behavior-version-latest", "rustls"]
version = "1"

[dependencies.aws-smithy-types-convert]
features = ["convert-chrono"]
version = "0.60.2"

[dependencies.clap]
features = ["derive"]
version = "=4.4.6"

[dependencies.tokio]
features = ["full"]
version = "1"
