[package]
authors = ["boavizta.org", "Olivier de Meringo <demeringo@gmail.com>", "Julien Nioche <jnioche@gmail.com>"]
edition = "2021"
name = "cloud-scanner-cli"
version = "3.2.0-SNAPSHOT"

[dependencies]
chrono = { version = "^0.4", features = ["serde"] }
csv = "1.3.0"
isocountry = "^0.3"
log = "0.4"
loggerv = "0.7"
once_cell = "1.20.2"
pkg-version = "*"
prometheus-client = "*"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
anyhow = "1.0.65"
async-trait = "0.1.58"
assert-json-diff = "2.0.2"
rocket = { version = "0.5.0", default-features = false, features = [
  "json",
] }
rocket_okapi = { version = "0.8.0", features = ["swagger", "rapidoc"] }
schemars = { version = "0.8", features = ["chrono"] }
aws-types = "1"
thiserror = "1.0.57"

[dependencies.boavizta_api_sdk]
version = "1.3.3"
# path = "../../boaviztapi-sdk-rust"

[dependencies.aws-config]
features = ["behavior-version-latest", "rustls"]
version = "1"

[dependencies.aws-sdk-cloudwatch]
features = ["behavior-version-latest", "rustls"]
version = "1"

[dependencies.aws-sdk-ec2]
features = ["behavior-version-latest", "rustls"]
version = "1"

[dependencies.aws-smithy-types-convert]
features = ["convert-chrono"]
version = "0.60.2"

[dependencies.clap]
features = ["derive"]
version = "=4.5.2"

[dependencies.tokio]
features = ["full"]
version = "1"
