[package]
authors = ["boavizta.org", "Olivier de Meringo <demeringo@gmail.com>"]
edition = "2021"
name = "cloud-scanner-lambda"
version = "0.4.1"
[[bin]]
name = "bootstrap-scan"
path = "src/main.rs"
[[bin]]
name = "bootstrap-metrics"
path = "src/metrics.rs"


[dependencies]
envy = "*"
log = "0.4"
pkg-version = "*"
serde_json = "1.0"

[dependencies.cloud-scanner-cli]
path = "../cloud-scanner-cli"

[dependencies.lambda_http]
version = "0.8.1"
default-features = false
features = ["apigw_rest", "alb"]

[dependencies.lambda_runtime]
version = "0.8.1"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.tokio]
features = ["full"]
version = "1"
